--- a/project/portfolio/assets/styles/style.css
+++ b/project/portfolio/assets/styles/style.css
@@ -37,19 +37,16 @@
     width: 100%;
     height: 900%;
     flex: 1;
-    align-items: flex-end;
+    align-items: center;
+
 }
 
-.greeting {
-    display: flex;
-    width: 100%;
-    justify-content: flex-start;
-}
 
 .description {
     display: flex;
     width: 100%;
     justify-content: flex-start;
+    flex-direction: column;
 }
 
 
@@ -100,9 +97,11 @@ a:link {
 .button_block {
     display: flex;
     width: 100%;
-    height: 30%;
+    height: 100px;
     padding: 15 px;
-    margin-bottom: 15px;
+    margin: 15px;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .section {
@@ -111,20 +110,19 @@ a:link {
     width: 100%;
     height: 50%;
     flex-wrap: wrap;
-    justify-content: space-around;
+
 }
 
 .some_menu {
     display: flex;
     width: 100%;
     justify-content: space-around;
+
 }
 
 .MyServ {
     display: flex;
     flex: 0 1 45%;
-    align-items: center;
-    justify-items: center;
     font-family: Heebo;
     font-style: normal;
     font-weight: normal;
@@ -136,8 +134,6 @@ a:link {
 .view_all {
     display: flex;
     flex: 0 1 45%;
-    justify-items: center;
-    align-items: center;
     font-family: Heebo;
     font-style: normal;
     font-weight: normal;
@@ -147,50 +143,25 @@ a:link {
     color: #00A8CC;
 }
 
-.head_of_job {
-    display: flex;
-    width: 100%;
-}
-
-.develop {
-    display: flex;
-    flex: 0 1 48%;
-    justify-content: center;
-}
-
-.auto {
-    display: flex;
-    flex: 0 1 48%;
-    justify-content: center;
-}
-
 .article_block {
     display: flex;
     flex: 1;
+}
+
+.article {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-
-}
-
-.article1 {
-    display: flex;
-    height: 30px;
     justify-content: center;
+    height: 250px;
     flex: 0 1 48%;
     background-color: white;
-}
-
-.article2 {
-    display: flex;
-    height: 30px;
-    justify-content: center;
-    flex: 0 1 48%;
-    background-color: white;
+    margin: 2%;
 }
 
 .menu {
     text-decoration: none;
-    padding: 4px;
+    padding: 10px;
     font-weight: bolder;
     font-family: 'Heebo', 'Times New Roman', Times, serif;
 }
@@ -211,6 +182,24 @@ h2 {
     font-size: 26px;
     line-height: 38px;
     color: #21243D;
+}
+
+h3 {
+    font-family: Heebo;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 30px;
+    color: #8a94ec;
+}
+
+h4 {
+    font-family: Heebo;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 28px;
+    color: #8a94ec;
 }
 
 p {
