--- a/project/fromHabr/assets/style.css
+++ b/project/fromHabr/assets/style.css
@@ -1,9 +1,9 @@
 .container {
     display: grid;
-    width: 100%;
-    height: 100%;
-    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-    grid-template-rows: repeat(2, 1fr);
+    width: 100vw;
+    height: 100vh;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-rows: repeat(2, 100px);
     grid-gap: 5px;
 }
 
