--- a/project/grid/style.css
+++ b/project/grid/style.css
@@ -2,62 +2,107 @@
     display: grid;
     width: 100vw;
     height: 100vh;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 2fr 1fr 2fr;
-    grid-column-gap: 15px;
-    grid-row-gap: 15px;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 2fr 1fr 1fr 1fr;
     background-color: #f3efe2;
 }
 
 .header {
     grid-row: 1 / 2;
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
     background-color: #dedee2;
     text-align: center;
+    padding: 30px;
 }
 
 .sidebar {
     grid-row: 2 / 6;
-    grid-column: 3 / 4;
+    grid-column: 2 / 3;
     background-color: #b0eed6;
     text-align: center;
+    padding: 30px;
+}
+
+.main {
+    grid-row: 2 / 6;
+    grid-column: 1 /2;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    grid-row-gap: 20px;
+    grid-column-gap: 40px;
 }
 
 .content-1 {
-    grid-row: 2 / 4;
+    grid-row: 1/ 2;
     grid-column: 1 /3;
     text-align: center;
+    padding: 30px;
 
 }
 
 .content-2 {
-    grid-row: 4 / 5;
+    grid-row: 2 / 3;
     grid-column: 1/ 2;
     background-color: #f8e9b7;
     text-align: center;
-    padding: 5px;
+    padding: 30px;
+    margin-left: 20px;
 }
 
 .content-3 {
-    grid-row: 4/ 5;
+    grid-row: 2/ 3;
     grid-column: 2/ 3;
     background-color: #f8e9b7;
     text-align: center;
-    padding-bottom: 5px;
+    padding: 30px;
+    margin-right: 20px;
+}
+
+.content-4 {
+    grid-row: 3/ 4;
+    grid-column: 1 /3;
+    background-color: #f8e9b7;
+    text-align: center;
+    padding: 30px;
+    margin: 20px;
 }
 
 .footer {
-    grid-row: 6 / 7;
-    grid-column: 1/ 5;
-    display: flex;
+    grid-row: 5/ 6;
+    grid-column: 1/ 3;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
     background-color: #d3d3d8;
+    text-align: center;
+    padding: 15px;
 }
 
-.footer_section {
-    display: flex;
-    flex: 1;
-    align-items: center;
-    justify-content: space-around;
+.footer_section1 {
+    grid-row: 1 / 2;
+    grid-column: 1/ 2;
+    background-color: #e6ebec;
+    margin: 20px;
+}
+
+.footer_section2 {
+    grid-row: 1 / 2;
+    grid-column: 2/ 3;
+    background-color: #e6ebec;
+    margin: 20px;
+}
+
+.footer_section3 {
+    grid-row: 1 / 2;
+    grid-column: 3/ 4;
+    background-color: #e6ebec;
+    margin: 20px;
+}
+
+.footer_section4 {
+    grid-row: 1 / 2;
+    grid-column: 4/ 5;
     background-color: #e6ebec;
     margin: 20px;
 }
