--- a/project/gridAdapt/style.css
+++ b/project/gridAdapt/style.css
@@ -1,12 +1,3 @@
-.container {
-    display: grid;
-    width: 100vw;
-    height: 100vh;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 2fr 1fr 1fr 1fr;
-    background-color: #f3efe2;
-}
-
 .header {
     grid-row: 1 / 2;
     grid-column: 1 / 3;
@@ -24,14 +15,13 @@
 }
 
 .main {
-    grid-row: 2 /5;
+    grid-row: 2 / 5;
     grid-column: 1 /2;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(3, 1fr);
     grid-row-gap: 20px;
     grid-column-gap: 40px;
-
 }
 
 .content-1 {
@@ -39,6 +29,7 @@
     grid-column: 1 /3;
     text-align: center;
     padding: 30px;
+
 }
 
 .content-2 {
@@ -68,15 +59,56 @@
     margin: 20px;
 }
 
-.footer {
-    grid-row: 5/ 6;
-    grid-column: 1/ 3;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    background-color: #d3d3d8;
-    text-align: center;
-    padding: 15px;
+@media screen and (min-width:1024px) {
+    .footer {
+        grid-row: 5/ 6;
+        grid-column: 1/ 3;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+        background-color: #d3d3d8;
+        text-align: center;
+        padding: 15px;
+    }
+
+    .container {
+        display: grid;
+        width: 100vw;
+        height: 100vh;
+        grid-template-columns: 2fr 1fr;
+        grid-template-rows: 1fr 2fr 1fr 1fr 1fr;
+        background-color: #f3efe2;
+    }
+}
+
+@media screen and (min-width:768px) and (max-width:1023px) {
+    .footer {
+        display: none;
+    }
+
+    .container {
+        display: grid;
+        width: 100vw;
+        height: 100vh;
+        grid-template-columns: 2fr;
+        grid-template-rows: 1fr 2fr 1fr 1fr;
+        background-color: #f3efe2;
+    }
+}
+
+@media screen and (max-width:767px) {
+    .footer {
+        display: none;
+    }
+
+    .container {
+        display: grid;
+        width: 100vw;
+        height: 100vh;
+        grid-template-columns: 2fr;
+        grid-template-rows: 1fr;
+        background-color: #f3efe2;
+    }
 }
 
 .footer_section1 {
