--- a/project/car/style.css
+++ b/project/car/style.css
@@ -1,161 +1,136 @@
 .container {
     display: grid;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 100px repeat(3, 200px) 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-rows: 1fr repeat(3, 2fr) 1fr;
     grid-gap: 1.5em;
     background-color: #f8f7f7;
-    align-items: space-between;
+
 }
 
 .header {
 
     grid-row: 1/ 2;
-    grid-column: 1/5;
-    width: 100vw;
+    grid-column: 1/6;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
     background-color: #2e2e2d;
     align-items: center;
 }
 
-.home {
-    grid-row: 1/2;
-    grid-column: 2/3;
-    font-family: Heebo;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 29px;
-    color: #f8f7f7;
-}
-
-.recipes {
-    grid-row: 1/2;
+.menu {
+    grid-row: 1/ 2;
     grid-column: 3/4;
-    font-family: Heebo;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 29px;
-    color: #f8f7f7;
 }
 
-.article {
-    grid-row: 1/2;
-    grid-column: 4/5;
+.nav-item {
     font-family: Heebo;
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
     line-height: 29px;
     color: #f8f7f7;
+    padding: 5px;
+
 }
 
-.contacts {
-    grid-row: 1/2;
-    grid-column: 5/6;
-    font-family: Heebo;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 29px;
-    color: #f8f7f7;
-}
-
-.purchase {
-    grid-row: 1/2;
-    grid-column: 6/7;
-    font-family: Heebo;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 29px;
-    color: #f8f7f7;
+.main {
+    grid-row: 2/5;
+    grid-column: 2/5;
+    display: grid;
+    gap: 5px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    align-items: center;
 }
 
 .content-1 {
-    grid-area: 2 / 2 / 4/ 2;
+    grid-area: 1/ 1/ 2 / 1;
     background-image: url("../car/img/Image№1.png");
+
 }
 
 .content-2 {
-    grid-row: 2/ 3;
-    grid-column: 3/ 5;
+    grid-row: 1/ 2;
+    grid-column: 2/ 3;
     background-image: url("../car/img/Image№4.png");
-    ;
 }
 
 
 .content-3 {
-    grid-row: 2/ 3;
-    grid-column: 4/ 5;
+    grid-row: 1/ 2;
+    grid-column: 3/ 4;
 }
 
 .content-4 {
-    grid-row: 3/ 4;
-    grid-column: 2/ 3;
+    grid-row: 2/ 3;
+    grid-column: 1/ 2;
 }
 
 .content-5 {
-    grid-row: 3/ 4;
-    grid-column: 3/ 4;
+    grid-row: 2/ 3;
+    grid-column: 2/ 3;
     background-image: url("../car/img/Image№3.png");
 }
 
 
 .content-6 {
-    grid-row: 3/ 4;
-    grid-column: 4/ 5;
+    grid-row: 2/ 3;
+    grid-column: 3/ 4;
     background-image: url("../car/img/Image_5.png");
 }
 
 .content-7 {
-    grid-row: 4/ 5;
-    grid-column: 2/ 3;
+    grid-row: 3/ 4;
+    grid-column: 1/ 2;
     background-image: url("../car/img/Image_5.png");
 }
 
 .content-8 {
-    grid-row: 4/5;
-    grid-column: 3/4;
+    grid-row: 3/4;
+    grid-column: 2/3;
     background-image: url("../car/img/Image_5.png");
 }
 
 
 .content-9 {
-    grid-row: 4/5;
-    grid-column: 4/5;
+    grid-row: 3/4;
+    grid-column: 3/4;
     background-image: url("../car/img/Image_5.png");
 }
 
 .footer {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    width: 100vw;
     grid-row: 5/ 6;
-    grid-column: 1/ 5;
+    grid-column: 1/ 6;
     background-color: #2e2e2d;
     align-items: center;
+    width: 100%;
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-rows: 1fr;
+    text-align: center;
 }
 
-.touch {
+.something {
     grid-row: 1/ 2;
     grid-column: 2/ 3;
     color: #f8f7f7;
+
 }
 
 .post {
     grid-row: 1/ 2;
     grid-column: 3/ 4;
     color: #f8f7f7;
+
 }
 
-.letter {
+.newsletter {
     grid-row: 1/ 2;
     grid-column: 4/ 5;
     color: #f8f7f7;
+
 }
