--- a/project/grid/style.css
+++ b/project/grid/style.css
@@ -1,49 +1,56 @@
 .container {
     display: grid;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
+    background-color: #f3efe2;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 2fr 1fr 1fr 1fr;
-    background-color: #f3efe2;
+    grid-template-areas:
+        "header header header"
+        "main main sidebar"
+        "main main sidebar"
+        "main main sidebar"
+        "main main sidebar"
+        "main main sidebar"
+        "footer footer footer"
 }
 
 .header {
-    grid-row: 1 / 2;
-    grid-column: 1 / 3;
+    grid-area: header;
     background-color: #dedee2;
     text-align: center;
     padding: 30px;
 }
 
 .sidebar {
-    grid-row: 2 / 5;
-    grid-column: 2 / 3;
+    grid-area: sidebar;
     background-color: #b0eed6;
     text-align: center;
     padding: 30px;
 }
 
 .main {
-    grid-row: 2 /5;
-    grid-column: 1 /2;
+    grid-area: main;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(3, 1fr);
     grid-row-gap: 20px;
-    grid-column-gap: 40px;
-
+    grid-column-gap: 20px;
+    padding: 20px;
+    grid-template-areas:
+        "content-1 content-1"
+        "content-2 content-3"
+        "content-4 content-4"
 }
 
 .content-1 {
-    grid-row: 1/ 2;
-    grid-column: 1 /3;
+    grid-area: content-1;
     text-align: center;
     padding: 30px;
 }
 
 .content-2 {
-    grid-row: 2 / 3;
-    grid-column: 1/ 2;
+    grid-area: content-2;
     background-color: #f8e9b7;
     text-align: center;
     padding: 30px;
@@ -51,8 +58,7 @@
 }
 
 .content-3 {
-    grid-row: 2/ 3;
-    grid-column: 2/ 3;
+    grid-area: content-3;
     background-color: #f8e9b7;
     text-align: center;
     padding: 30px;
@@ -60,8 +66,7 @@
 }
 
 .content-4 {
-    grid-row: 3/ 4;
-    grid-column: 1 /3;
+    grid-area: content-4;
     background-color: #f8e9b7;
     text-align: center;
     padding: 30px;
@@ -69,40 +74,38 @@
 }
 
 .footer {
-    grid-row: 5/ 6;
-    grid-column: 1/ 3;
+    grid-area: footer;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     grid-template-rows: 1fr;
     background-color: #d3d3d8;
     text-align: center;
     padding: 15px;
+    grid-template-areas:
+        "footer_section1 footer_section2 footer_section3 footer_section4"
 }
 
 .footer_section1 {
-    grid-row: 1 / 2;
-    grid-column: 1/ 2;
+    grid-area: footer_section1;
     background-color: #e6ebec;
-    margin: 20px;
+
 }
 
 .footer_section2 {
-    grid-row: 1 / 2;
-    grid-column: 2/ 3;
+    grid-area: footer_section2;
     background-color: #e6ebec;
-    margin: 20px;
+
 }
 
 .footer_section3 {
-    grid-row: 1 / 2;
-    grid-column: 3/ 4;
+    grid-area: footer_section3;
     background-color: #e6ebec;
-    margin: 20px;
+
 }
 
 .footer_section4 {
-    grid-row: 1 / 2;
-    grid-column: 4/ 5;
+    grid-area: footer_section4;
     background-color: #e6ebec;
-    margin: 20px;
+
 }
