--- a/project/gridAdapt/style.css
+++ b/project/gridAdapt/style.css
@@ -62,6 +62,8 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr;
+        grid-row-gap: 20px;
+        grid-column-gap: 20px;
         background-color: #d3d3d8;
         text-align: center;
         padding: 15px;
@@ -118,7 +120,7 @@
         width: 100vw;
         height: 100vh;
         grid-template-columns: 2fr;
-        rid-template-rows: 1fr 2fr 1fr 1fr;
+        grid-template-rows: 1fr 2fr 1fr 1fr;
         background-color: #f3efe2;
         grid-template-areas:
             "header header "
@@ -129,27 +131,22 @@
     }
 }
 
-
 .footer_section1 {
     grid-area: footer_section1;
     background-color: #e6ebec;
-    margin: 20px;
 }
 
 .footer_section2 {
     grid-area: footer_section2;
     background-color: #e6ebec;
-    margin: 20px;
 }
 
 .footer_section3 {
     grid-area: footer_section3;
     background-color: #e6ebec;
-    margin: 20px;
 }
 
 .footer_section4 {
     grid-area: footer_section4;
     background-color: #e6ebec;
-    margin: 20px;
 }
