--- a/project/grid/style.css
+++ b/project/grid/style.css
@@ -1,7 +1,7 @@
 .container {
     display: grid;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     background-color: #f3efe2;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 2fr 1fr 1fr 1fr;
@@ -54,7 +54,7 @@
     background-color: #f8e9b7;
     text-align: center;
     padding: 30px;
-    margin-left: 20px;
+
 }
 
 .content-3 {
@@ -62,7 +62,7 @@
     background-color: #f8e9b7;
     text-align: center;
     padding: 30px;
-    margin-right: 20px;
+
 }
 
 .content-4 {
@@ -70,7 +70,7 @@
     background-color: #f8e9b7;
     text-align: center;
     padding: 30px;
-    margin: 20px;
+
 }
 
 .footer {
