--- a/project/car/style.css
+++ b/project/car/style.css
@@ -1,28 +1,33 @@
 .container {
     display: grid;
-    width: 100%;
-    height: 100vh;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    grid-template-rows: 1fr repeat(3, 2fr) 1fr;
-    grid-gap: 1.5em;
-    background-color: #f8f7f7;
-
+    width: 100vw;
+    height: 100%;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 2fr 2fr 2fr 1fr;
+    grid-gap: 1%;
+    grid-template-areas:
+        "header header header header header"
+        ".  main main main ."
+        ".  main main main  ."
+        ".  section section sidebar ."
+        "footer footer footer footer footer"
 }
 
 .header {
-
-    grid-row: 1/ 2;
-    grid-column: 1/6;
+    grid-area: header;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
     background-color: #2e2e2d;
     align-items: center;
+    grid-template-areas:
+        ". menu  ."
 }
 
 .menu {
-    grid-row: 1/ 2;
-    grid-column: 3/4;
+    grid-area: menu;
+    text-align: center;
+
 }
 
 .nav-item {
@@ -33,77 +38,97 @@
     line-height: 29px;
     color: #f8f7f7;
     padding: 5px;
-
 }
 
 .main {
-    grid-row: 2/5;
-    grid-column: 2/5;
+    grid-area: main;
+    width: 100%;
+    height: 100%;
     display: grid;
     gap: 5px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     align-items: center;
+    grid-template-areas:
+        "content-1 content-2 content-2"
+        "content-1 content-5 content-6"
 }
 
 .content-1 {
-    grid-area: 1/ 1/ 2 / 1;
-    background-image: url("../car/img/Image№1.png");
+    grid-area: content-1;
+    background-image: url("img/Image№1.png");
+    background-repeat: no-repeat;
+    max-width: 100%;
+    height: 100%;
+    border: 1px solid red;
 
 }
 
 .content-2 {
-    grid-row: 1/ 2;
-    grid-column: 2/ 3;
-    background-image: url("../car/img/Image№4.png");
-}
+    grid-area: content-2;
+    background-image: url("img/Image№4.png");
+    background-repeat: no-repeat;
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: 1px solid red;
 
-
-.content-3 {
-    grid-row: 1/ 2;
-    grid-column: 3/ 4;
-}
-
-.content-4 {
-    grid-row: 2/ 3;
-    grid-column: 1/ 2;
 }
 
 .content-5 {
-    grid-row: 2/ 3;
-    grid-column: 2/ 3;
-    background-image: url("../car/img/Image№3.png");
-}
+    grid-area: content-5;
+    background-image: url("img/Image№3.png");
+    background-repeat: no-repeat;
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
 
+}
 
 .content-6 {
-    grid-row: 2/ 3;
-    grid-column: 3/ 4;
-    background-image: url("../car/img/Image_5.png");
+    grid-area: content-6;
+    background-image: url("img/Image_5.png");
+    background-repeat: no-repeat;
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-.content-7 {
-    grid-row: 3/ 4;
-    grid-column: 1/ 2;
-    background-image: url("../car/img/Image_5.png");
+.section {
+    grid-area: section;
+    border: 1px solid red;
+    grid-template-areas:
+        "section-1 section-1 aside"
+        "section-1 csection-1 aside"
 }
 
-.content-8 {
-    grid-row: 3/4;
-    grid-column: 2/3;
-    background-image: url("../car/img/Image_5.png");
+.img {
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: 1psx solid #b3ecf9;
 }
 
+.white-box {
+    position: relative;
+    width: 730px;
+    height: 249px;
+    left: 408px;
+    top: 1082px;
+    border: 1psx solid red;
+}
 
-.content-9 {
-    grid-row: 3/4;
-    grid-column: 3/4;
-    background-image: url("../car/img/Image_5.png");
+p {
+    font-family: PT Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: #666666;
 }
 
 .footer {
-    grid-row: 5/ 6;
-    grid-column: 1/ 6;
+    grid-area: footer;
     background-color: #2e2e2d;
     align-items: center;
     width: 100%;
@@ -112,25 +137,21 @@
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     grid-template-rows: 1fr;
     text-align: center;
+    grid-template-areas:
+        "something post newsletter"
 }
 
 .something {
-    grid-row: 1/ 2;
-    grid-column: 2/ 3;
+    grid-area: something;
     color: #f8f7f7;
-
 }
 
 .post {
-    grid-row: 1/ 2;
-    grid-column: 3/ 4;
+    grid-area: post;
     color: #f8f7f7;
-
 }
 
 .newsletter {
-    grid-row: 1/ 2;
-    grid-column: 4/ 5;
+    grid-area: newsletter;
     color: #f8f7f7;
-
 }
