--- a/project/car/style.css
+++ b/project/car/style.css
@@ -93,7 +93,7 @@
         "section-1 csection-1 aside"
 }
 
-.section__image {
+.subsection__image {
     grid-area: section-1;
     position: relative;
     max-width: 100%;
@@ -101,37 +101,40 @@
     object-fit: cover;
 }
 
-.section__white-box {
+.subsection__white-box {
     grid-area: section-1;
     position: absolute;
     width: 90%;
     height: 20%;
     background: olivedrab;
-    margin: 5%;
-    z-index: -2;
+    z-index: 100;
 }
 
-.section__text {
+.subsection__text {
     font-family: "PT Sans";
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 24px;
     color: #666666;
+    position: absolute;
+    z-index: 200;
 }
 
 .aside {
     grid-area: aside;
     background: rgb(40, 72, 179);
+    position: relative;
+    width: 30%;
 }
 
 .aside__button {
     Width: 267px;
     padding: 5px;
     Height: 51.17px;
-    Top: 387.83px;
-    position: relative;
-    z-index: 1;
+    position: absolute;
+    z-index: 100;
+    background-color: black;
 }
 
 .aside__text {
@@ -141,6 +144,8 @@
     font-size: 15px;
     line-height: 25px;
     color: #666666;
+    position: absolute;
+    z-index: 200;
 }
 
 .footer {
