--- a/project/car/style.css
+++ b/project/car/style.css
@@ -125,7 +125,14 @@
     grid-area: aside;
     background: rgb(40, 72, 179);
     position: relative;
-    width: 30%;
+}
+
+.aside__image {
+    grid-area: section-1;
+    position: relative;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
 }
 
 .aside__button {
