--- a/project/car/style.css
+++ b/project/car/style.css
@@ -2,8 +2,9 @@
     display: grid;
     width: 100%;
     height: 100%;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 20vw 20vw 20vw 1fr;
+    grid-template-rows: 15vh 35vh 35vh 20vh;
+
     grid-gap: 1%;
     grid-template-areas:
         "header header header header header"
@@ -16,7 +17,7 @@
 .header {
     grid-area: header;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 30vw 40vw 30vw;
     grid-template-rows: 1fr;
     background-color: #2e2e2d;
     align-items: center;
@@ -33,7 +34,7 @@
     font-family: Heebo;
     font-style: normal;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 70%;
     line-height: 29px;
     color: #f8f7f7;
     padding: 5px;
@@ -116,7 +117,7 @@
     font-family: "PT Sans";
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;
+    font-size: 70%;
     line-height: 24px;
     color: #666666;
 }
@@ -148,7 +149,7 @@
     font-family: PT Sans;
     font-style: normal;
     font-weight: normal;
-    font-size: 15px;
+    font-size: 70%;
     line-height: 25px;
     color: #666666;
     position: absolute;
@@ -165,6 +166,7 @@
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     grid-template-rows: 1fr;
     text-align: center;
+    font-size: 70%;
     grid-template-areas:
         "something post newsletter"
 }
