--- a/project/bootstr with cards/withCards.css
+++ b/project/bootstr with cards/withCards.css
@@ -1,11 +1,5 @@
-.container {
-    height: 10vh;
-    width: 100vw;
-}
-
 .content {
     background: #edf0f5;
-    min-height: 30vh;
     padding: 2%;
     padding-top: 2%;
     padding-bottom: 2%;
@@ -17,8 +11,8 @@
 }
 
 .card-img-top {
-    height: 200px;
-    width: 500px;
+    height: 30%;
+    width: 100%;
 }
 
 .cards {
