--- a/project/car/style.css
+++ b/project/car/style.css
@@ -1,16 +1,17 @@
 .container {
     display: grid;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     grid-template-columns: 1fr 20vw 20vw 20vw 1fr;
-    grid-template-rows: 15vh 35vh 35vh 20vh;
+    grid-template-rows: 10vh 35vh 35vh 30vh;
 
     grid-gap: 1%;
     grid-template-areas:
         "header header header header header"
         " .  main main main . "
         " .  main main main  . "
-        " .  section section sidebar . "
+        " .  section section section . "
+        " .  section section section . "
         "footer footer footer footer footer"
 }
 
@@ -34,7 +35,7 @@
     font-family: Heebo;
     font-style: normal;
     font-weight: 500;
-    font-size: 70%;
+    font-size: 1.2em;
     line-height: 29px;
     color: #f8f7f7;
     padding: 5px;
@@ -89,48 +90,65 @@
 .section {
     grid-area: section;
     position: relative;
+    display: grid;
+    gap: 5px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     grid-template-areas:
-        "section-1 section-1 aside"
-        "section-1 csection-1 aside"
+        "subsection subsection aside"
+        "subsection subsection aside"
+}
+
+.subsection {
+    grid-area: subsection;
+    width: 100%;
+    box-shadow: 0px 1px 5px rgb(149, 148, 148);
 }
 
 .subsection__image {
-    grid-area: section-1;
+    grid-area: subsection;
     position: relative;
+    z-index: 1;
     max-width: 100%;
     max-height: 100%;
     object-fit: cover;
 }
 
 .subsection__white-box {
-    grid-area: section-1;
-    position: relative;
+    grid-area: subsection;
+    position: absolute;
     width: 90%;
     height: 20%;
+    z-index: 2;
+    bottom: -10px;
+    left: 4%;
     background: rgb(245, 247, 241);
-    bottom: 10%;
-    left: 5%;
-
 }
 
 .subsection__text {
     font-family: "PT Sans";
     font-style: normal;
     font-weight: normal;
-    font-size: 70%;
+    font-size: 1.2em;
     line-height: 24px;
     color: #666666;
+    position: absolute;
+    z-index: 3;
+    bottom: 210px;
+    left: 4%;
 }
 
 .aside {
     grid-area: aside;
-    background: rgb(40, 72, 179);
+    width: 100%;
     position: relative;
+    box-shadow: 0px 1px 5px rgb(141, 139, 139);
+    background-color: white;
 }
 
 .aside__image {
-    grid-area: section-1;
     position: relative;
+    z-index: 1;
     max-width: 100%;
     max-height: 100%;
     object-fit: cover;
@@ -138,22 +156,28 @@
 
 .aside__button {
     Width: 267px;
-    padding: 5px;
+    padding: 1;
     Height: 51.17px;
     position: absolute;
-    z-index: 100;
-    background-color: black;
+    z-index: 2;
+    bottom: 10px;
+    color: white;
+    text-align: center;
+    padding-top: 5%;
+    background-color: rgb(19, 18, 18);
 }
 
 .aside__text {
     font-family: PT Sans;
     font-style: normal;
     font-weight: normal;
-    font-size: 70%;
-    line-height: 25px;
-    color: #666666;
+    font-size: 1.2em;
+    color: #242222;
     position: absolute;
-    z-index: 200;
+    z-index: 3;
+    padding: .5rem;
+    line-height: 1.6em;
+
 }
 
 .footer {
@@ -166,7 +190,7 @@
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     grid-template-rows: 1fr;
     text-align: center;
-    font-size: 70%;
+    font-size: 100%;
     grid-template-areas:
         "something post newsletter"
 }
