--- a/project/calc16/calc16.css
+++ b/project/calc16/calc16.css
@@ -1,10 +1,11 @@
 .wrapper {
     display: flex;
     justify-content: center;
+    background-color: rgb(242, 245, 245);
 }
 
 .header {
-    font-weight: 700;
+    height: 10%;
     padding-bottom: 10px;
     display: flex;
     justify-content: center;
@@ -25,31 +26,41 @@
 }
 
 .dropdown {
-    margin: 5% 0 5% 0;
+    height: 5%;
 }
 
 .fieldName {
     display: flex;
-    padding: 10px;
-    height: 50px;
+    height: 5%;
     font-size: 1em;
     font-weight: 500;
+
 }
 
 p {
-    font-size: 1em;
+    font-size: 1.2em;
     font-weight: 500;
 }
 
 .form_radio {
-    margin: 2%;
+    margin-top: 5%;
+    display: flex;
 }
 
 .checkbox {
-    margin: 5%
+    margin: 5% 0 5% 0;
 }
 
 .button {
-    margin-left: 5%;
-    margin-bottom: 5%;
+    display: flex;
+    width: 100%;
+    height: 5%;
+    justify-content: center;
+
+}
+
+.btn {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
 }
