--- a/project/registration/index.css
+++ b/project/registration/index.css
@@ -77,8 +77,6 @@ select {
     }
 }
 
-
-
 .wrapper {
     display: grid;
     width: 100vw;
@@ -127,21 +125,18 @@ select {
     grid-area: fields;
     display: flex;
     flex-direction: column;
-    margin-bottom: 5%;
+    justify-content: space-between;
 }
 
-.fields>input {
-    margin: 2%;
-    border-radius: 5px;
-    border-width: 1px;
-    height: 15%;
-    font-size: 0.7rem;
+input {
+    width: 100%;
+    height: 40px;
 }
 
 .errorMessage {
-    height: 5px;
     color: red;
     margin-top: 0;
+    height: 20px;
 }
 
 
@@ -153,12 +148,18 @@ select {
     align-items: center;
     border-radius: 5px;
     border-width: 1px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
 }
 
 .successMessage {
+    display: flex;
     height: 5px;
     color: rgb(71, 67, 67);
-    margin-top: 0;
+    margin-top: 2%;
+    font: 2em 'Yandex-Sans-Text-Web-Regular';
 }
 
 .signup {
