--- a/project/checkSpam17/index.css
+++ b/project/checkSpam17/index.css
@@ -1,9 +1,8 @@
 .form {
     display: flex;
-    width: 600px;
-    height: 500px;
+    width: 100vw;
+    height: 100vh;
     flex-direction: column;
-
     border: solid;
     border-width: 1px;
 
@@ -15,13 +14,13 @@
     margin: 5%;
     border-width: 1px;
     border-color: black;
+
 }
 
-#message,
+#сomment,
 #input {
     height: 50px;
     width: 400px;
-    padding: 10px;
     line-height: 1.5;
     border-radius: 5px;
     border: 1px solid #ccc;
