--- a/project/checkSpam17/index.css
+++ b/project/checkSpam17/index.css
@@ -1,7 +1,7 @@
 .form {
     display: flex;
-    width: 100vw;
-    height: 100vh;
+    width: 600px;
+    height: 700px;
     flex-direction: column;
     border: solid;
     border-width: 1px;
@@ -14,7 +14,6 @@
     margin: 5%;
     border-width: 1px;
     border-color: black;
-
 }
 
 #сomment,
