--- a/project/superhero/index.css
+++ b/project/superhero/index.css
@@ -1,13 +1,13 @@
-.title .description .features .rating {
-    width: 100px;
-    height: 100px;
-    border: 1px solid black;
+.heroesSlider {
+    border: black solid 1px;
+    padding: 15px;
+
 }
 
 
 .wrapper {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background: white;
     display: flex;
 }
